<resources>
    <string name="app_name">ChefQuizList</string>
    <string name="action_settings">Settings</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="log_in_button_label">Sign in using Email</string>
    <string name="sign_up_here">No account?  Create one!</string>
    <string name="password_repeat">Enter Password Again</string>
    <string name="signup_error_password">Passwords must match!</string>
    <string name="choose_category">Choose your question category</string>
    <string name="signin">Please Sign In</string>
    <string name="sign_up">Sign up here!</string>
    <string name="chefsquiz">The Ultimate Chefs Quiz</string>
    <string name="gamemode">Choose a Game Mode</string>
    <string name="againstclock">Against the clock</string>
    <string name="threelives">3 lives</string>
    <string name="both">Both</string>
    <string name="freePlay">Free Play</string>
</resources>
