<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/meringue">
    <TextView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAllCaps="true"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/customborder_grey"
        android:id="@+id/clock_TV"
        android:text="@string/againstclock"
        android:textSize="36sp"
        android:textColor="#fff"
        android:textStyle="bold"/>
    <TextView
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/threelives_TV"
        android:background="@drawable/customborder_blue"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:text="@string/threelives"
        android:textColor="#fff"
        android:textStyle="bold"/>
    <TextView

        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/both_TV"
        android:background="@drawable/customborder_red"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAllCaps="true"
        android:layout_weight="1"
        android:text="@string/both"
        android:textSize="36sp"
        android:textColor="#fff"
        android:textStyle="bold"/>
    <TextView
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAllCaps="true"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/customborder_purple"
        android:id="@+id/freePlay_TV"
        android:text="@string/freePlay"
        android:textSize="36sp"
        android:textColor="#fff"
        android:textStyle="bold"/>
</LinearLayout>